# NovaUniverse.py

./: .buildinfo  .gitignore  CHANGELOG.rst  CNAME  LICENCE.txt  MANIFEST.in  Makefile  README.md  README.txt  api.html  build_docs.py  demo.py  events.html  genindex.html  index.html  interfaces.html  interfaces.stats.discord.html  interfaces.stats.server.html  interfaces.tournaments.html  interfaces.tournaments.mcf.html  interfaces.tournaments.nova_games.html  nova_games_live_stats_template.json  objects.html  objects.inv  objects.tournaments.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  utils.html
.doctrees/: api.doctree  environment.pickle  events.doctree  index.doctree  interfaces.doctree  interfaces.stats.discord.doctree  interfaces.stats.server.doctree  interfaces.tournaments.doctree  interfaces.tournaments.mcf.doctree  interfaces.tournaments.nova_games.doctree  objects.doctree  objects.tournaments.doctree  utils.doctree
.github/workflows/: codacy.yml  documentation.yaml  lint_and_test.yaml
_modules/: index.html
_modules/novauniverse/: api.html  configuration.html  errors.html  event_client.html  events.html  interfaces.html
_modules/novauniverse/api/: cdn.html  endpoints.html  errors.html
_modules/novauniverse/interfaces/: tournaments.html
_modules/novauniverse/interfaces/stats/: discord.html  server.html
_modules/novauniverse/interfaces/stats/discord/: discord_stats.html
_modules/novauniverse/interfaces/stats/server/: global_.html  nova_online_player.html  nova_server.html  player_preview.html  server_info.html  system.html
_modules/novauniverse/interfaces/tournaments/: mcf.html  nova_games.html
_modules/novauniverse/interfaces/tournaments/mcf/: mcf_tournament.html
_modules/novauniverse/interfaces/tournaments/nova_games/: nova_games_tournament.html
_modules/novauniverse/objects/: nova_dataclass.html  nova_player.html  order_by.html  timestamp.html  tournaments.html
_modules/novauniverse/objects/tournaments/: tournament_player.html  tournament_team.html
_modules/novauniverse/utils/: search.html
_sources/: api.rst.txt  interfaces.rst.txt  interfaces.tournaments.mcf.rst.txt  interfaces.tournaments.nova_games.rst.txt  objects.rst.txt  objects.tournaments.rst.txt  utils.rst.txt
docs/: CNAME  api.rst  conf.py  events.rst  index.html  index.rst  interfaces.mcf.rst  interfaces.rst  interfaces.stats.discord.rst  interfaces.stats.server.rst  interfaces.tournaments.rst  modules.rst  novauniverse.API.rst  novauniverse.html  novauniverse.objects.rst  novauniverse.rst  objects.rst  objects.tournaments.rst  search.js
docs/novauniverse/: api.html  client.html  configuration.html  errors.html  events.html  info.html  interfaces.html  logging.html  objects.html  utils.html
docs/novauniverse/api/: cache.html  cdn.html  endpoints.html  errors.html
docs/novauniverse/events/: client_ready.html  player_join.html  player_leave.html
docs/novauniverse/interfaces/: mcf.html  news.html  nova_games.html  stats.html
docs/novauniverse/interfaces/mcf/: mcf_tournament.html
docs/novauniverse/interfaces/news/: author.html  newsletter.html  type.html
docs/novauniverse/interfaces/nova_games/: dynamic_config.html  nova_games_tournament.html
docs/novauniverse/interfaces/stats/: discord.html  server.html
docs/novauniverse/interfaces/stats/discord/: discord_stats.html
docs/novauniverse/interfaces/stats/server/: global_.html  nova_online_player.html  nova_server.html  (+3 more)
docs/novauniverse/objects/: nova_dataclass.html  nova_player.html  order_by.html  timestamp.html  tournaments.html
docs/novauniverse/objects/tournaments/: tournament_player.html  tournament_team.html
docs/novauniverse/utils/: search.html
docs_template/: README.md  theme.css
examples/: top_mcf_players.py
novauniverse/: __init__.py  _find_.py  _license_key_validation_.py  _player_.py  _server_.py  _session_.py  client.py  configuration.py  errors.py  event_client.py  info.py  logging.py  player.py  session.py
novauniverse/API/: __init__.py  endpoints.py
novauniverse/APIs/: __init__.py  mojang.py  nova.py
novauniverse/api/: __init__.py  async_api.py  cache.py  cdn.py  endpoints.py  errors.py  pyscript.py
novauniverse/api_/: errors.py
novauniverse/endpoints/: __init__.py  mojang.py  nova.py
novauniverse/events/: __init__.py  client_ready.py  player_join.py  player_leave.py
novauniverse/interfaces/: __init__.py
novauniverse/interfaces/mcf/: __init__.py  mcf_tournament.py
novauniverse/interfaces/news/: __init__.py  author.py  newsletter.py  type.py
novauniverse/interfaces/nova_games/: __init__.py  dynamic_config.py  nova_games_tournament.py
novauniverse/interfaces/stats/discord/: __init__.py  discord_stats.py
novauniverse/interfaces/stats/server/: __init__.py  global_.py  nova_online_player.py  nova_server.py  player_preview.py  server_info.py  system.py
novauniverse/interfaces/tournaments/: __init__.py
novauniverse/interfaces/tournaments/mcf/: __init__.py  mcf_tournament.py
novauniverse/interfaces/tournaments/nova_games/: __init__.py  nova_games_tournament.py
novauniverse/objects/: __init__.py  _game_.py  _license_.py  _mcf_.py  _player_.py  _server_.py  _session_.py  game.py  news.py  nova_dataclass.py  nova_player.py  order_by.py  timestamp.py
novauniverse/objects/tournaments/: __init__.py  tournament_player.py  tournament_team.py
novauniverse/utils/: __init__.py  search.py  timestamp.py
novauniverse_old/: _keys_.py  _mcf_.py  _server_.py  info.py
novauniverse_old/objects/: _player_.py  _server_.py  _session_.py
scripts/: add_cname.py
tests/: __init__.py  general_test.py
tests/interfaces/: test_mcf.py
tests/interfaces/stats/: test_discord.py  test_server.py
tests/interfaces/tournaments/: test_mcf.py  test_nova_games.py
tests/performance/: .template.py  __init__.py  get_latest_novagames.py
