[project]
name = "novauniverse"
description = "A modern & maintained wrapper for the Nova Universe API written in ðŸ Python."
authors = [
    {name = "Goldy", email = "goldy@devgoldy.me"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = [
    "novauniverse", "minecraft novauniverse", "nova universe", "mc novauniverse"
]
classifiers = [
	'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11'
]
dependencies = [
    "requests",
    "importlib-metadata; python_version<'3.8'",
    "devgoldyutils>=2.4.3",
    "prettyprinter",
    "python-decouple>=3.7"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "Sphinx",
    "furo",
    "pytest",
    "pytest-cov",
]

[project.urls]
GitHub = "https://github.com/NovaUniverse/NovaUniverse.py"
BugTracker = "https://github.com/NovaUniverse/NovaUniverse.py/issues"
ChangeLog = "https://github.com/NovaUniverse/NovaUniverse.py/blob/main/CHANGELOG.rst"

[tool.setuptools.dynamic]
version = { attr = "novauniverse.info.VERSION" }

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["novauniverse"]


# Ruff
# ---------------

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501", "E402", "E702"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10